--- a/src/app/modules/analytics/global-tokens/global-tokens.component.html
+++ b/src/app/modules/analytics/global-tokens/global-tokens.component.html
@@ -1,10 +1,11 @@
+<m-analytics__tabs></m-analytics__tabs>
 <div class="m-analyticsGlobalTokens__header">
   <h1>Tokens</h1>
   <div class="m-layout__spacer"></div>
   <m-wallet__tokenPriceBadge></m-wallet__tokenPriceBadge>
 </div>
 
-<div class="m-tabs__container">
+<div class="m-tabs__container m-analyticsGlobalTokens__tabs">
   <div class="m-tabs__tab">
     <a routerLink="../supply" routerLinkActive="m-tabs__tab--selected"
       >Supply</a
