--- a/src/app/modules/analytics/v2/dashboard.component.html
+++ b/src/app/modules/analytics/v2/dashboard.component.html
@@ -1,4 +1,5 @@
 <ng-template #body>
+  <m-analytics__tabs></m-analytics__tabs>
   <ng-template #headerFilters>
     <div class="m-analyticsDashboard__headerFilters" *ngIf="layout === 'chart'">
       <!-- <div *ngIf="session.isAdmin()" class="m-analytics__channelSearch"> -->
