--- a/src/app/common/components/dropdown-selector/dropdown-selector.component.scss
+++ b/src/app/common/components/dropdown-selector/dropdown-selector.component.scss
@@ -45,7 +45,7 @@ m-dropdownSelector {
 
   &.expanded {
     @include m-theme() {
-      box-shadow: 0px 1px 15px 0 rgba(themed($m-black), 0.15);
+      box-shadow: 0px 1px 15px 0 rgba(themed($m-black-always), 0.15);
     }
     .m-dropdownSelector__header {
       @include m-theme() {
@@ -76,7 +76,7 @@ m-dropdownSelector {
         border-radius: $rounded-top;
         border-bottom: none;
         @include m-theme() {
-          box-shadow: 0px -4px 16px -4px rgba(themed($m-black), 0.15);
+          box-shadow: 0px -4px 16px -4px rgba(themed($m-black-always), 0.15);
         }
       }
     }
