--- a/src/app/modules/analytics/v2/dashboard.component.scss
+++ b/src/app/modules/analytics/v2/dashboard.component.scss
@@ -11,7 +11,7 @@ m-analytics__dashboard {
       i {
         font-size: 12px;
         @include m-theme() {
-          color: rgba(themed($m-grey-300), 0.7);
+          color: themed($m-textColor--secondary);
         }
       }
       .m-tooltip--bubble {
@@ -48,8 +48,8 @@ m-analytics__dashboard {
     .m-analytics__channelSearch {
       margin-right: 8px;
       @include m-theme() {
-        border: themed($m-grey-50);
-        color: themed($m-grey-100);
+        border: themed($m-borderColor--primary);
+        color: themed($m-textColor--secondary);
       }
     }
   }
@@ -66,7 +66,7 @@ m-analytics__dashboard {
   margin: 8px 16px 32px 40px;
   font-weight: 400;
   @include m-theme() {
-    color: themed($m-grey-300);
+    color: themed($m-textColor--secondary);
   }
 }
 
