--- a/src/app/common/components/join-banner/join-banner.component.ng.scss
+++ b/src/app/common/components/join-banner/join-banner.component.ng.scss
@@ -1,4 +1,5 @@
 @import 'defaults.scss';
+@import '../../../common/layout/layout.scss';
 
 :host {
   .m-joinBanner {
@@ -19,58 +20,79 @@
     .m-joinBanner__container {
       display: flex;
       flex-flow: row nowrap;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
+      margin: 0 60px;
+
+      @media screen and (max-width: 400px) {
+        margin: 0 20px;
+      }
 
       .m-joinBanner__container--left {
         display: flex;
         flex-flow: row nowrap;
         align-items: center;
+        width: $layoutSidebarFullWidth;
+
+        .m-joinBanner__logo {
+          width: 120px;
+          margin-bottom: 10px;
+
+          @include unselectable;
+        }
       }
 
-      .m-joinBanner__text {
-        font-weight: 500;
-        font-size: 18px;
-        line-height: 1.222;
+      .m-joinBanner__container--center {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        width: $layoutMainFullWidth;
 
-        @include m-theme() {
-          color: themed($m-textColor--secondaryInverted);
-        }
-
-        @include unselectable;
-
-        @media screen and (max-width: $min-tablet) {
+        @media screen and (max-width: $layoutMin3ColWidth) {
           display: none;
         }
-      }
 
-      .m-joinBanner__logo {
-        width: 120px;
-        margin-bottom: 10px;
+        .m-joinBanner__text {
+          font-weight: 500;
+          font-size: 18px;
+          line-height: 1.222;
 
-        @media screen and (min-width: $min-tablet) {
-          margin-right: 100px;
-        }
-
-        @include unselectable;
-      }
-
-      // overriding button theming as m-button does not yet work well with inverted background colors.
-      ::ng-deep m-button {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-        button {
-          @include unselectable;
           @include m-theme() {
-            color: themed($m-textColor--primaryInverted) !important;
+            color: themed($m-textColor--secondaryInverted);
           }
-          &:hover {
+
+          @include unselectable;
+
+          @media screen and (max-width: $min-tablet) {
+            display: none;
+          }
+        }
+      }
+
+      .m-joinBanner__container--right {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: flex-end;
+        width: $layoutRightFullWidth;
+
+        // overriding button theming as m-button does not yet work well with inverted background colors.
+        ::ng-deep m-button {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          button {
+            @include unselectable;
             @include m-theme() {
-              background-color: themed(
-                $m-bgColor--btnHoverLightAlways
-              ) !important;
+              color: themed($m-textColor--primaryInverted) !important;
+            }
+            &:hover {
+              @include m-theme() {
+                background-color: themed(
+                  $m-bgColor--btnHoverLightAlways
+                ) !important;
+              }
             }
           }
         }
