add boost rotator and fix tests

--- a/src/app/modules/newsfeed/feeds/feed-type-popover/feed-type-popover.component.html
+++ b/src/app/modules/newsfeed/feeds/feed-type-popover/feed-type-popover.component.html
@@ -24,7 +24,9 @@
     >
       <i class="material-icons">tune</i>
     </a>
-    <ng-container i18n="@@MINDS__NEWSFEED__TOP_POSTS__PROMPT">Prioritize top posts in your feed</ng-container>
+    <ng-container i18n="@@MINDS__NEWSFEED__TOP_POSTS__PROMPT"
+      >Prioritize top posts in your feed</ng-container
+    >
   </m-tooltip>
   <popper-content #popper>
     <div class="m-feedTypePopper__container">
