--- a/src/app/modules/newsfeed/feeds/top-feed-mini/top-feed-mini.component.html
+++ b/src/app/modules/newsfeed/feeds/top-feed-mini/top-feed-mini.component.html
@@ -1,6 +1,17 @@
 <ng-container
   *ngFor="let activity$ of feedsService.feed | async; let i = index"
 >
+  <!--boost rotator-->
+  <ng-container *ngIf="i === 1">
+    <ng-container *mIfFeature="'boost-rotator'">
+      <ng-container *mIfBrowser>
+        <m-newsfeed--boost-rotator
+          #feedViewChildren
+        ></m-newsfeed--boost-rotator>
+      </ng-container>
+    </ng-container>
+  </ng-container>
+
   <m-activity
     *ngIf="activity$ | async as activity"
     [entity]="activity"
@@ -17,7 +28,9 @@
   *ngIf="(feedsService.feed | async)?.length"
   class="m-topFeedMini__showMore__container"
 >
-  <m-loadingSpinner [inProgress]="feedsService.inProgress | async"></m-loadingSpinner>
+  <m-loadingSpinner
+    [inProgress]="feedsService.inProgress | async"
+  ></m-loadingSpinner>
   <a
     i18n="@@MINDS__NEWSFEED__TOP_FEED__SHOW_MORE"
     class="m-topFeedMini__showMore__link"
