--- a/src/app/modules/analytics/v2/components/tabs/tabs.component.html
+++ b/src/app/modules/analytics/v2/components/tabs/tabs.component.html
@@ -1,6 +1,4 @@
-<!-- ojm todo feature flag here  -->
-<!-- <ng-container *mIfFeature="'nav-2021'"> -->
-<ng-container *ngIf="true">
+<ng-container *mIfFeature="'nav-2021'">
   <div class="m-tabs__container">
     <div class="m-tabs__tab">
       <a
