--- a/src/app/common/layout/sidebar-more/sidebar-more.component.ng.scss
+++ b/src/app/common/layout/sidebar-more/sidebar-more.component.ng.scss
@@ -1,24 +1,17 @@
 @import 'defaults.scss';
 
 :host {
-  // position: absolute;
-  // top: 0;
-  // left: 0;
-  // @include z-index(topbar);
-
+  display: block;
   .m-sidebarMore {
-    // @include m-theme() {
-    // box-shadow: 0 0 5px 0 rgba(themed($m-black-always), 0.3);
-    // border: 1px solid themed($m-borderColor--primary);
-    // background-color: themed($m-bgColor--primary);
-    // }
+    width: 220px;
+
+    @media screen and (max-width: $max-mobile) {
+      width: 316px;
+      max-width: 79vw;
+    }
 
     ul.m-sidebarMore__dropdown {
-      // width: 304px;
       list-style: none;
-      // margin: 34px 0 0;
-      // top: 15px;
-      // right: -20px;
 
       @include m-theme() {
         background-color: themed($m-bgColor--primary);
