--- a/src/app/modules/wallet/components/network-swap-bridge/skale/skale.component.html
+++ b/src/app/modules/wallet/components/network-swap-bridge/skale/skale.component.html
@@ -26,7 +26,7 @@
     <m-wallet__skaleCommunityPool
       *ngSwitchCase="'community-pool'"
     ></m-wallet__skaleCommunityPool>
-    <m-wallet__skaleFaucet *ngSwitchCase="'faucet'"></m-wallet__skaleFaucet>
+    <!-- <m-wallet__skaleFaucet *ngSwitchCase="'faucet'"></m-wallet__skaleFaucet> -->
     <m-wallet__skaleTransferBridge
       *ngSwitchDefault
     ></m-wallet__skaleTransferBridge>
