--- a/src/app/modules/default-feed/container.component.ng.scss
+++ b/src/app/modules/default-feed/container.component.ng.scss
@@ -14,8 +14,13 @@
         flex-flow: column nowrap;
         max-width: none;
 
+        // all direct children except for the first.
         > * + * {
           margin-top: 20px;
+        }
+        // last direct child.
+        > *:last-child {
+          margin-bottom: 80px;
         }
       }
     }
