--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -64,5 +64,5 @@
 
 <m-channel--onboarding *ngIf="showOnboarding"></m-channel--onboarding>
 <m-formToast></m-formToast>
-<m-joinBanner></m-joinBanner>
-<m-appPrompt></m-appPrompt>
+<m-joinBanner *ngIf="!isMobileOrTablet()"></m-joinBanner>
+<m-appPrompt *ngIf="isMobileOrTablet()"></m-appPrompt>
