(chore): bring topbar dropdown to logged out so footer is accessible in guest mode

--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.scss
@@ -29,6 +29,10 @@ m-usermenu__v3 {
         box-shadow: none;
       }
 
+      &.m-userMenu__dropdown--loggedOut {
+        padding-top: 10px;
+      }
+
       li.m-userMenuDropdown__item {
         padding: 0;
         font-size: 15px;
