--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -77,12 +77,12 @@
               title="Join Minds Now"
               i18n-title="@@COMMON__JOIN_MINDS_NOW"
             >
-              Join Minds Now
+              Join Now
             </a>
           </div>
         </ng-container>
 
-        <div class="m-v3Topbar__userMenu" *ngIf="getCurrentUser()">
+        <div class="m-v3Topbar__userMenu">
           <div class="m-v3Topbar__spacer"></div>
           <!-- edit -->
           <ng-content select="[icons]"></ng-content>
