--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -3,16 +3,17 @@
     [object]="getCurrentUser()"
     [editMode]="false"
     (click)="toggleMenu()"
-    *ngIf="useAvatar; else iconAnchor"
+    *ngIf="useAvatar && getCurrentUser(); else iconAnchor"
   ></minds-avatar>
   <ng-template #iconAnchor>
     <a class="m-user-menu__Anchor" (click)="toggleMenu()">
-      <i class="material-icons">menu</i>
+      <i class="material-icons">more_vert</i>
     </a>
   </ng-template>
 
   <ul
     class="m-dropdown__list m-userMenu__dropdown mdl-shadow--3dp"
+    [class.m-userMenu__dropdown--loggedOut]="!getCurrentUser()"
     [hidden]="!(service.isOpen$ | async)"
   >
     <li
@@ -57,6 +58,7 @@
         m-dropdownList__item
         m-userMenuDropdown__item m-userMenuDropdown__spacer
       "
+      *ngIf="getCurrentUser()"
     ></li>
 
     <li
@@ -93,6 +95,7 @@
     <li
       class="m-dropdownList__item m-userMenuDropdown__item"
       (click)="closeMenu()"
+      *ngIf="getCurrentUser()"
     >
       <a routerLink="/boost/console">
         <span i18n="@@COMMON__BOOST_CONSOLE">Boost Console</span>
@@ -102,6 +105,7 @@
     <li
       class="m-dropdownList__item m-userMenuDropdown__item"
       (click)="closeMenu()"
+      *ngIf="getCurrentUser()"
     >
       <a routerLink="/settings">
         <span i18n="@@COMMON__SETTINGS">Settings</span>
